# constellation-tempmon-dummy

./: .editorconfig  .gitignore  .markdownlintrc  .pre-commit-config.yaml  pyproject.toml  rename-template.py
src/Caribou/: Caribou.py  __main__.py
src/TempMon/: TempMon.py  __main__.py
src/Template/: Template.py  __main__.py
