# SPDX-FileCopyrightText: 2025 DESY and the Constellation authors
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "TemplateSatellite"
version = "0.0.1"
authors = [{name = "Constellation Authors"}]
description = "Template Satellite for Constellation"
readme = "README.md"
license = {text = "EUPL-1.2"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Unix",
    "License :: OSI Approved",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "ConstellationDAQ",
]

[project.scripts]
SatelliteTemplate = "Template.__main__:main"

[project.urls]
Homepage = "https://constellation.pages.desy.de/"
Repository = "https://gitlab.desy.de/constellation/templates/satellite-py"

[project.optional-dependencies]
dev = [
    "flake8", "flake8-pyproject",
    "black",
    "mypy",
    "isort",
]

[tool.flake8]
max-line-length = 125

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
line_length = 125
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
